--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,12 @@ skip_tags: true
 build:
   project: Common.sln
   verbosity: minimal
-image: Visual Studio 2017
+image: Visual Studio 2015
 configuration: Debug
 before_build:
   nuget restore Common.sln
+after_test: 
+    - OpenCover.Console.exe -register:user -target:"C:\Program Files (x86)\Microsoft Visual Studio 14.0\Common7\IDE\MSTest.exe" -targetargs:"/noresults /noisolation /testcontainer:""UnitTest.dll" -targetdir:".\csharp\UnitTest\bin\Debug" -excludebyattribute:*.ExcludeFromCodeCoverage* -hideskipped:All -excludebyfile:*\*Designer.cs -output:.\coverage.xml -filter:"-[UnitTest*]*""
+    - "SET PATH=C:\\Python34;C:\\Python34\\Scripts;%PATH%"
+    - pip install codecov
+    - codecov -f "coverage.xml"	
