Add SQLServr class

--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -52,6 +52,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="SQLServer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
