--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,7 @@ configuration: Debug
 before_build:
   nuget restore Common.sln
 after_test: 
-    - OpenCover.Console.exe -register:user -target:"C:\Program Files (x86)\Microsoft Visual Studio 14.0\Common7\IDE\MSTest.exe" -targetargs:"/noresults /noisolation /testcontainer:""UnitTest.dll" -targetdir:".\UnitTest\bin\Debug" -excludebyattribute:*.ExcludeFromCodeCoverage* -hideskipped:All -filter:"-[UnitTest*]*" -excludebyfile:*\*Designer.cs -output:.\coverage.xml"
+    - OpenCover.Console.exe -register:user -target:"C:\Program Files (x86)\Microsoft Visual Studio 14.0\Common7\IDE\MSTest.exe" -targetargs:"/noisolation /testcontainer:""UnitTest.dll" -targetdir:".\UnitTest\bin\Debug" -excludebyattribute:*.ExcludeFromCodeCoverage* -hideskipped:All -output:.\coverage.xml"
     - "SET PATH=C:\\Python34;C:\\Python34\\Scripts;%PATH%"
     - pip install codecov
     - codecov -f ".\coverage.xml"	
