Mod Notification class, setting files

--- a/Common/Properties/Settings.settings
+++ b/Common/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="SqlServerPassword" Type="System.String" Scope="Application">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="NotifyIconPath" Type="System.String" Scope="Application">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
