--- a/Common/app.config
+++ b/Common/app.config
@@ -22,6 +22,9 @@
             <setting name="SqlServerPassword" serializeAs="String">
                 <value />
             </setting>
+            <setting name="NotifyIconPath" serializeAs="String">
+                <value />
+            </setting>
         </Common.Properties.Settings>
     </applicationSettings>
 </configuration>
