--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -45,7 +45,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataGridViewControl.cs" />
     <Compile Include="Log.cs" />
+    <Compile Include="Notification.cs" />
+    <Compile Include="Process.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
