Add notification test file

--- a/Common/app.config
+++ b/Common/app.config
@@ -4,6 +4,9 @@
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="Common.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Common.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <applicationSettings>
         <Common.Properties.Settings>
@@ -20,8 +23,15 @@
                 <value />
             </setting>
             <setting name="NotifyIconPath" serializeAs="String">
-                <value />
+                <value>..\..\..\CommonTests\img\favicon.ico</value>
             </setting>
         </Common.Properties.Settings>
     </applicationSettings>
+    <userSettings>
+        <Common.Properties.Settings>
+            <setting name="設定" serializeAs="String">
+                <value />
+            </setting>
+        </Common.Properties.Settings>
+    </userSettings>
 </configuration>
