--- a/Common/Properties/Settings.settings
+++ b/Common/Properties/Settings.settings
@@ -15,6 +15,9 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="NotifyIconPath" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">..\..\..\CommonTests\img\favicon.ico</Value>
+    </Setting>
+    <Setting Name="設定" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
   </Settings>
