--- a/CommonTests/CommonTests.csproj
+++ b/CommonTests/CommonTests.csproj
@@ -61,6 +61,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="DateEditTests.cs" />
+    <Compile Include="IOTests.cs" />
     <Compile Include="JsonTests.cs" />
     <Compile Include="NotificationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
