--- a/CommonTests/app.config
+++ b/CommonTests/app.config
@@ -7,8 +7,23 @@
     </configSections>
     <userSettings>
         <CommonTests.Properties.Settings>
-            <setting name="NotifierAppID" serializeAs="String">
+            <setting name="NotificationAppID" serializeAs="String">
                 <value>{D65231B0-B2F1-4857-A4CE-A8E7C6EA7D27}\WindowsPowerShell\v1.0\powershell.exe</value>
+            </setting>
+            <setting name="NotificationIconPath" serializeAs="String">
+                <value>..\..\img\favicon.ico</value>
+            </setting>
+            <setting name="IODirectoryPath" serializeAs="String">
+                <value>.\IOTest</value>
+            </setting>
+            <setting name="IOFilePath" serializeAs="String">
+                <value>.\IOTest</value>
+            </setting>
+            <setting name="IOFileName" serializeAs="String">
+                <value>IOTest.txt</value>
+            </setting>
+            <setting name="IODirectoryPathExt" serializeAs="String">
+                <value>.\IOTest\</value>
             </setting>
         </CommonTests.Properties.Settings>
     </userSettings>
