--- a/CommonTests/CommonTests.csproj
+++ b/CommonTests/CommonTests.csproj
@@ -63,6 +63,7 @@
     <Compile Include="DateEditTests.cs" />
     <Compile Include="IOTests.cs" />
     <Compile Include="JsonTests.cs" />
+    <Compile Include="LogTests.cs" />
     <Compile Include="NotificationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
