--- a/CommonTests/Properties/Settings.settings
+++ b/CommonTests/Properties/Settings.settings
@@ -20,5 +20,17 @@
     <Setting Name="IODirectoryPathExt" Type="System.String" Scope="User">
       <Value Profile="(Default)">.\IOTest\</Value>
     </Setting>
+    <Setting Name="LogFilePath" Type="System.String" Scope="User">
+      <Value Profile="(Default)">.\Log</Value>
+    </Setting>
+    <Setting Name="LogFileName" Type="System.String" Scope="User">
+      <Value Profile="(Default)">LogTest.log</Value>
+    </Setting>
+    <Setting Name="ExFilePath" Type="System.String" Scope="User">
+      <Value Profile="(Default)">.\ExTest</Value>
+    </Setting>
+    <Setting Name="ExFileName" Type="System.String" Scope="User">
+      <Value Profile="(Default)">ErrorTest.log</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
