--- a/CommonTests/app.config
+++ b/CommonTests/app.config
@@ -25,6 +25,18 @@
             <setting name="IODirectoryPathExt" serializeAs="String">
                 <value>.\IOTest\</value>
             </setting>
+            <setting name="LogFilePath" serializeAs="String">
+                <value>.\Log</value>
+            </setting>
+            <setting name="LogFileName" serializeAs="String">
+                <value>LogTest.log</value>
+            </setting>
+            <setting name="ExFilePath" serializeAs="String">
+                <value>.\ExTest</value>
+            </setting>
+            <setting name="ExFileName" serializeAs="String">
+                <value>ErrorTest.log</value>
+            </setting>
         </CommonTests.Properties.Settings>
     </userSettings>
 </configuration>
