--- a/CommonTests/app.config
+++ b/CommonTests/app.config
@@ -37,6 +37,15 @@
             <setting name="ExFileName" serializeAs="String">
                 <value>ErrorTest.log</value>
             </setting>
+            <setting name="AppveyorSqlServerName" serializeAs="String">
+                <value>(local)\\SQL2014</value>
+            </setting>
+            <setting name="AppveyorSqlServerUser" serializeAs="String">
+                <value>sa</value>
+            </setting>
+            <setting name="AppveyorSqlServerPw" serializeAs="String">
+                <value>Password12!</value>
+            </setting>
         </CommonTests.Properties.Settings>
     </userSettings>
 </configuration>
