--- a/CommonTests/app.config
+++ b/CommonTests/app.config
@@ -46,6 +46,15 @@
             <setting name="AppveyorSqlServerPw" serializeAs="String">
                 <value>Password12!</value>
             </setting>
+            <setting name="SqlServerName" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="SqlServerUser" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="SqlServerPw" serializeAs="String">
+                <value />
+            </setting>
         </CommonTests.Properties.Settings>
     </userSettings>
 </configuration>
