--- a/CommonTests/app.config
+++ b/CommonTests/app.config
@@ -55,6 +55,9 @@
             <setting name="SqlServerPw" serializeAs="String">
                 <value />
             </setting>
+            <setting name="AppveyorBuildEnv" serializeAs="String">
+                <value>74.205.54.20,104.197.110.30,104.197.145.181,146.148.85.29,67.225.139.254,67.225.138.82,67.225.139.144</value>
+            </setting>
         </CommonTests.Properties.Settings>
     </userSettings>
 </configuration>
