--- a/CommonTests/Properties/Settings.settings
+++ b/CommonTests/Properties/Settings.settings
@@ -50,5 +50,8 @@
     <Setting Name="SqlServerPw" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="AppveyorBuildEnv" Type="System.String" Scope="User">
+      <Value Profile="(Default)">74.205.54.20,104.197.110.30,104.197.145.181,146.148.85.29,67.225.139.254,67.225.138.82,67.225.139.144</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
