--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -48,6 +48,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommonArray.cs" />
     <Compile Include="DataGridViewControl.cs" />
     <Compile Include="DateEdit.cs" />
     <Compile Include="IO.cs" />
