--- a/CommonTests/Properties/Settings.settings
+++ b/CommonTests/Properties/Settings.settings
@@ -53,5 +53,8 @@
     <Setting Name="AppveyorBuildEnv" Type="System.String" Scope="User">
       <Value Profile="(Default)">74.205.54.20,104.197.110.30,104.197.145.181,146.148.85.29,67.225.139.254,67.225.138.82,67.225.139.144</Value>
     </Setting>
+    <Setting Name="JsonUrl" Type="System.String" Scope="User">
+      <Value Profile="(Default)">http://weather.livedoor.com/forecast/webservice/json/v1?city=400040</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
