--- a/CommonTests/CommonTests.csproj
+++ b/CommonTests/CommonTests.csproj
@@ -78,6 +78,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="SQLServerTests.cs" />
+    <Compile Include="TaxTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
