--- a/CommonTests/app.config
+++ b/CommonTests/app.config
@@ -47,13 +47,13 @@
                 <value>Password12!</value>
             </setting>
             <setting name="SqlServerName" serializeAs="String">
-                <value>172.24.90.22\Dashboard</value>
+                <value />
             </setting>
             <setting name="SqlServerUser" serializeAs="String">
-                <value>dashboard</value>
+                <value />
             </setting>
             <setting name="SqlServerPw" serializeAs="String">
-                <value>78366257DNA</value>
+                <value />
             </setting>
             <setting name="AppveyorBuildEnv" serializeAs="String">
                 <value>74.205.54.20,104.197.110.30,104.197.145.181,146.148.85.29,67.225.139.254,67.225.138.82,67.225.139.144</value>
