--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -54,6 +54,7 @@
     <Compile Include="ArrayEdit.cs" />
     <Compile Include="DataGridViewControl.cs" />
     <Compile Include="DateEdit.cs" />
+    <Compile Include="InputCheck.cs" />
     <Compile Include="IO.cs" />
     <Compile Include="Json.cs" />
     <Compile Include="Log.cs" />
