--- a/CommonTests/CommonTests.csproj
+++ b/CommonTests/CommonTests.csproj
@@ -79,6 +79,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="SmtpTests.cs" />
     <Compile Include="SQLServerTests.cs" />
     <Compile Include="TaxTests.cs" />
   </ItemGroup>
