--- a/CommonTests/app.config
+++ b/CommonTests/app.config
@@ -61,6 +61,21 @@
             <setting name="JsonUrl" serializeAs="String">
                 <value>http://weather.livedoor.com/forecast/webservice/json/v1?city=400040</value>
             </setting>
+            <setting name="SendGridApiKey" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="SendGridSendToAddress" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="SendGridSendToName" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="SendGridSubject" serializeAs="String">
+                <value>Test Mail</value>
+            </setting>
+            <setting name="SendGridBody" serializeAs="String">
+                <value>Test Mail</value>
+            </setting>
         </CommonTests.Properties.Settings>
     </userSettings>
   <runtime>
