--- a/CommonTests/app.config
+++ b/CommonTests/app.config
@@ -1,24 +1,39 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="CommonTests.Properties.SendMailSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-            <section name="CommonTests.Properties.SQLServerSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-            <section name="CommonTests.Properties.JsonSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-            <section name="CommonTests.Properties.NotificationSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-            <section name="CommonTests.Properties.SendMail" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-            <section name="CommonTests.Properties.LogSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-            <section name="CommonTests.Properties.IO" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-            <section name="CommonTests.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="CommonTests.Properties.MySqlSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+            <section name="CommonTests.Properties.SendMailSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+            <section name="CommonTests.Properties.SQLServerSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+            <section name="CommonTests.Properties.JsonSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+            <section name="CommonTests.Properties.NotificationSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+            <section name="CommonTests.Properties.SendMail" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+            <section name="CommonTests.Properties.LogSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+            <section name="CommonTests.Properties.IO" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+            <section name="CommonTests.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <userSettings>
+        <CommonTests.Properties.MySqlSettings>
+            <setting name="Server" serializeAs="String">
+                <value>xxx.xxx.xxx.xxx</value>
+            </setting>
+            <setting name="User" serializeAs="String">
+                <value>TestUser</value>
+            </setting>
+            <setting name="Password" serializeAs="String">
+                <value>TestPassword</value>
+            </setting>
+            <setting name="Database" serializeAs="String">
+                <value>Test</value>
+            </setting>
+        </CommonTests.Properties.MySqlSettings>
         <CommonTests.Properties.SendMailSettings>
             <setting name="SendGridApiKey" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="SmtpServer" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="SmtpPort" serializeAs="String">
                 <value>25</value>
@@ -30,25 +45,25 @@
                 <value>Test Body</value>
             </setting>
             <setting name="From" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="FromName" serializeAs="String">
                 <value>From</value>
             </setting>
             <setting name="To" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="ToName" serializeAs="String">
                 <value>To</value>
             </setting>
             <setting name="Cc" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="CcName" serializeAs="String">
                 <value>Cc</value>
             </setting>
             <setting name="Bcc" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="BccName" serializeAs="String">
                 <value>Bcc</value>
@@ -101,13 +116,13 @@
         </CommonTests.Properties.NotificationSettings>
         <CommonTests.Properties.SendMail>
             <setting name="SendGridApiKey" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="SendGridSendToAddress" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="SendGridSendToName" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="SendGridSubject" serializeAs="String">
                 <value>Test Mail Subject</value>
@@ -146,7 +161,7 @@
         </CommonTests.Properties.IO>
         <CommonTests.Properties.Settings>
             <setting name="SmtpServer" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="SmtpPort" serializeAs="String">
                 <value>0</value>
@@ -156,9 +171,9 @@
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0" />
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/></startup></configuration>
